Fix menu buttons size. On small screens they were presenting a bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,7 @@ button img {
 
 }
 
-@media screen and (max-width:400px) {
+@media screen and (max-width:450px) {
 
     #gaming-area {
         height: 70%;
@@ -364,7 +364,7 @@ button img {
 
     .game-button button {
         height: 12vw;
-        width: 45vw;
+        width: 50vw;
     }
 
     .options {
